versions/26.1.2/translated/ru_ru/develop/items/potions.md
---
title: Зелья
description: Узнайте, как добавить зелье для различных эффектов мобов.
authors:
  - cassiancc
  - dicedpixels
  - Drakonkinst
  - JaaiDead
  - PandoricaVi
---

Зелья — это расходные материалы, которые дают сущности определенный эффект. Игрок может варить зелья, используя Варочную Стойку, или получать их как предметы с помощью различных других игровых механик.

## Пользовательские зелья {#custom-potions}

Так же, как предметы и блоки, зелья необходимо регистрировать.

### Создание зелья {#creating-the-potion}

Давайте начнем с объявления поля для хранения экземпляра вашего `Potion`. Мы будем напрямую использовать `ModInitializer`-реализующий класс для хранения этого. Обратите внимание на использование метода `Registry.registerForHolder`, так как, подобно эффектам мобов, большинство ванильных методов, работающих с зельями, предпочитают принимать их в виде холдеров/контейнеров (Holder).

<<< @/reference/26.1.2/src/main/java/com/example/docs/potion/ExampleModPotions.java#register_potion

Мы передаем экземпляр `MobEffectInstance`, который принимает 3 параметра:

- `Holder<MobEffect> effect` — Эффект, представленный в виде контейнера. Здесь мы используем наш собственный эффект. В качестве альтернативы вы можете получить доступ к эффектам классического Minecraft
  через класс `MobEffects`.
- `int duration` - Длительность эффекта в игровых тиках.
- `int amplifier` - Усилитель эффекта. Например, Haste II будет иметь усилитель 1.

::: info

Чтобы создать свой собственный эффект зелья, ознакомьтесь с руководством [Эффекты](../entities/effects).

:::

### Регистрация зелья {#registering-the-potion}

В нашем инициализаторе мы будем использовать событие `FabricBrewingRecipeRegistryBuilder.BUILD` для регистрации нашего зелья с помощью метода `BrewingRecipeRegistry.registerPotionRecipe`.

<<< @/reference/26.1.2/src/main/java/com/example/docs/potion/ExampleModPotions.java#register_recipes

`addMix` принимает 3 параметра:

- `Holder<Potion> from` — Исходное  зелье, представленное в виде контейнера. Обычно это может быть бутылка с водой или мутное зелье.
- `Item item` - Предмет, являющийся основным ингредиентом зелья.
- `Holder<Potion> to` — Результирующее зелье, представленное в виде контейнера.

После регистрации вы сможете сварить зелье «Tater» из картофеля.

![Эффект в инвентаре игрока](/assets/develop/tater-potion.png)
